Fix alignment when putting <a> and <button> based buttons side by side in ie

--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -7,9 +7,13 @@ form p {
 /** =SHARED BUTTON STYLES
 ----------------------------------------------- */
 button { 
+  position: relative;
+  top: -2px;
   width: auto; 
   overflow: visible; 
 }
 button span { 
+  position: relative;
+  top: 1px;
   margin-top: 1px; 
 }
